Fixed z-index issue in seethroughscroll

--- a/source/css/scss/molecules/_seeThroughScroll.scss
+++ b/source/css/scss/molecules/_seeThroughScroll.scss
@@ -2,7 +2,7 @@
 
 .seeThroughScroll {
 	position: relative;
-	@include zIndex(seeThroughScroll);
+	@include zIndex(menuBar content seeThroughScroll);
 
 	&-size {
 		overflow: hidden;
@@ -18,7 +18,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		@include zIndex(seeThroughScroll content);
+		@include zIndex(menuBar content seeThroughScroll content);
 		@include mqDisableSeeThroughScroll {
 			position: relative;
 			width: auto;
@@ -47,6 +47,6 @@
 	}
 	&-overlay {
 		position: relative;
-		@include zIndex(seeThroughScroll overlay);
+		@include zIndex(menuBar content seeThroughScroll overlay);
 	}
 }
