--- a/source/css/scss/molecules/layout/_zIndex.scss
+++ b/source/css/scss/molecules/layout/_zIndex.scss
@@ -23,19 +23,25 @@ $zIndex: (
 		),
 	),
 	(
-		name: seeThroughScroll,
-		subZIndex: (
-			content,
-			overlay,
-			front
-		),
-	),
-	(
 		name: menuBar,
 		subZIndex: (
 			contextContent,
 			bar,
-			content
+			(
+				name: content,
+				subZIndex: (
+					(
+						name: seeThroughScroll,
+						subZIndex: (
+							content,
+							overlay,
+							front,
+
+						),
+					),
+					buttons,
+				)
+			),
 		),
 	),
 	overlay,
